tests/baselines/reference/parserGreaterThanTokenAmbiguity17.errors.txt
tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity17.ts(1,7): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity17.ts (1 errors) ====
    1 >>> = 2;
          ~
!!! error TS1109: Expression expected.